added explanation for id etc.

--- a/qa21a/ssurvey/codebook.html
+++ b/qa21a/ssurvey/codebook.html
@@ -114,6 +114,18 @@ margin: 30px;
 </div>
 
 <hr>
+<div id="var-ques"><table><tr><td width="100"><b>変数名</b></td><td>id</td></tr><tr><td><b>内容</b></td><td>回答の番号（1～80）</td></tr></table></div>
+<br>
+
+<hr>
+<div id="var-ques"><table><tr><td width="100"><b>変数名</b></td><td>res_start</td></tr><tr><td><b>内容</b></td><td>回答の開始時刻</td></tr></table></div>
+<br>
+
+<hr>
+<div id="var-ques"><table><tr><td width="100"><b>変数名</b></td><td>res_start</td></tr><tr><td><b>内容</b></td><td>回答の終了時刻</td></tr></table></div>
+<br>
+
+<hr>
 <div id="var-ques"><table><tr><td width="100"><b>変数名</b></td><td>q02</td></tr><tr><td><b>質問文</b></td><td>あなたの性別をお答えください。（戸籍上の性別をお答えください。）</td></tr></table></div>
 <div id="codes"><table><tr><th>コード</th><th>意味</th></tr>
 <tr><td align="center">1</td><td>男性</td></tr>
