--- a/qa21a/t09/figtab.html
+++ b/qa21a/t09/figtab.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=shift_jis">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -10,10 +10,10 @@
 	{font-family:Wingdings;
 	panose-1:5 0 0 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:"ÇlÇr ñæí©";
+	{font-family:"Ôº≠Ôº≥ ÊòéÊúù";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
-	{font-family:"ÇlÇr ÉSÉVÉbÉN";
+	{font-family:"Ôº≠Ôº≥ „Ç¥„Ç∑„ÉÉ„ÇØ";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
 	{font-family:"Cambria Math";
@@ -22,31 +22,31 @@
 	{font-family:"Arial Black";
 	panose-1:2 11 10 4 2 1 2 2 2 4;}
 @font-face
-	{font-family:HGP∫ﬁºØ∏M;
+	{font-family:HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏M;
 	panose-1:2 11 6 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:HGP∫ﬁºØ∏E;
+	{font-family:HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏E;
 	panose-1:2 11 9 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:"ÇlÇr ÇoÉSÉVÉbÉN";
+	{font-family:"Ôº≠Ôº≥ Ôº∞„Ç¥„Ç∑„ÉÉ„ÇØ";
 	panose-1:2 11 6 0 7 2 5 8 2 4;}
 @font-face
-	{font-family:HGê≥û≤èëëÃ-PRO;
+	{font-family:HGÊ≠£Ê•∑Êõ∏‰Ωì-PRO;
 	panose-1:3 0 6 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:"\@ÇlÇr ÉSÉVÉbÉN";
+	{font-family:"\@Ôº≠Ôº≥ „Ç¥„Ç∑„ÉÉ„ÇØ";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
-	{font-family:"\@ÇlÇr ÇoÉSÉVÉbÉN";}
+	{font-family:"\@Ôº≠Ôº≥ Ôº∞„Ç¥„Ç∑„ÉÉ„ÇØ";}
 @font-face
-	{font-family:"\@ÇlÇr ñæí©";
+	{font-family:"\@Ôº≠Ôº≥ ÊòéÊúù";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
-	{font-family:"\@HGê≥û≤èëëÃ-PRO";}
+	{font-family:"\@HGÊ≠£Ê•∑Êõ∏‰Ωì-PRO";}
 @font-face
-	{font-family:"\@HGP∫ﬁºØ∏E";}
+	{font-family:"\@HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏E";}
 @font-face
-	{font-family:"\@HGP∫ﬁºØ∏M";}
+	{font-family:"\@HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏M";}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin:0mm;
@@ -55,7 +55,7 @@
 	font-size:10.5pt;
 	font-family:"Times New Roman",serif;}
 span.a
-	{mso-style-name:é©ï™ópëæéö;
+	{mso-style-name:Ëá™ÂàÜÁî®Â§™Â≠ó;
 	font-family:"Arial Black",sans-serif;}
 .MsoChpDefault
 	{font-family:"Century",serif;}
@@ -86,15 +86,15 @@ punctuation'>
  <tr>
   <td width=491 valign=top style='width:130.0mm;padding:0mm 5.4pt 0mm 5.4pt'>
   <p class=MsoNormal align=left style='text-align:left'><a name=title><span
-  class=a><span style='font-family:HGP∫ﬁºØ∏E'>ÉgÉsÉbÉN</span><span lang=EN-US>9</span></span></a><span
-  class=a><span style='font-family:HGP∫ﬁºØ∏E'>Å@ê}ï\Ç»Ç«</span></span><span
-  style='font-family:"ÇlÇr ñæí©",serif'>Å@</span></p>
+  class=a><span style='font-family:HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏E'>„Éà„Éî„ÉÉ„ÇØ</span><span lang=EN-US>9</span></span></a><span
+  class=a><span style='font-family:HGPÔΩ∫ÔæûÔΩºÔΩØÔΩ∏E'>„ÄÄÂõ≥Ë°®„Å™„Å©</span></span><span
+  style='font-family:"Ôº≠Ôº≥ ÊòéÊúù",serif'>„ÄÄ</span></p>
   </td>
   <td width=161 valign=top style='width:120.5pt;padding:0mm 5.4pt 0mm 5.4pt'>
   <p class=MsoNormal align=right style='text-align:right'><span lang=EN-US>2022</span><span
-  style='font-family:"ÇlÇr ñæí©",serif'>îN</span><span lang=EN-US>6</span><span
-  style='font-family:"ÇlÇr ñæí©",serif'>åé</span><span lang=EN-US>10</span><span
-  style='font-family:"ÇlÇr ñæí©",serif'>ì˙</span></p>
+  style='font-family:"Ôº≠Ôº≥ ÊòéÊúù",serif'>Âπ¥</span><span lang=EN-US>6</span><span
+  style='font-family:"Ôº≠Ôº≥ ÊòéÊúù",serif'>Êúà</span><span lang=EN-US>10</span><span
+  style='font-family:"Ôº≠Ôº≥ ÊòéÊúù",serif'>Êó•</span></p>
   </td>
  </tr>
 </table>
@@ -103,280 +103,280 @@ punctuation'>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=361 height=410 id="ê} 1"
+<p class=MsoNormal><span lang=EN-US><img width=361 height=410 id="Âõ≥ 1"
 src="img/image001.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 3"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 3"
 src="img/image002.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=338 height=387 id="ê} 4"
+<p class=MsoNormal><span lang=EN-US><img width=338 height=387 id="Âõ≥ 4"
 src="img/image003.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 5"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 5"
 src="img/image004.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=383 height=387 id="ê} 7"
+<p class=MsoNormal><span lang=EN-US><img width=383 height=387 id="Âõ≥ 7"
 src="img/image005.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 8"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 8"
 src="img/image006.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=437 height=842 id="ê} 9"
+<p class=MsoNormal><span lang=EN-US><img width=437 height=842 id="Âõ≥ 9"
 src="img/image007.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 10"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 10"
 src="img/image008.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=385 id="ê} 11"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=385 id="Âõ≥ 11"
 src="img/image009.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=437 height=410 id="ê} 12"
+<p class=MsoNormal><span lang=EN-US><img width=437 height=410 id="Âõ≥ 12"
 src="img/image010.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 13"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 13"
 src="img/image011.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=437 height=361 id="ê} 14"
+<p class=MsoNormal><span lang=EN-US><img width=437 height=361 id="Âõ≥ 14"
 src="img/image012.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 15"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 15"
 src="img/image013.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=437 height=482 id="ê} 16"
+<p class=MsoNormal><span lang=EN-US><img width=437 height=482 id="Âõ≥ 16"
 src="img/image014.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 17"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 17"
 src="img/image015.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="ê} 18"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="Âõ≥ 18"
 src="img/image016.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="ê} 19"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="Âõ≥ 19"
 src="img/image017.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="ê} 20"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="Âõ≥ 20"
 src="img/image018.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="ê} 23"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="Âõ≥ 23"
 src="img/image019.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="ê} 24"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="Âõ≥ 24"
 src="img/image020.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="ê} 25"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=313 id="Âõ≥ 25"
 src="img/image021.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="ê} 26"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="Âõ≥ 26"
 src="img/image022.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="ê} 27"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="Âõ≥ 27"
 src="img/image023.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="ê} 28"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=289 id="Âõ≥ 28"
 src="img/image024.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=439 height=338 id="ê} 29"
+<p class=MsoNormal><span lang=EN-US><img width=439 height=338 id="Âõ≥ 29"
 src="img/image025.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 30"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 30"
 src="img/image026.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 31"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 31"
 src="img/image027.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 32"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 32"
 src="img/image028.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=439 height=387 id="ê} 33"
+<p class=MsoNormal><span lang=EN-US><img width=439 height=387 id="Âõ≥ 33"
 src="img/image029.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=337 id="ê} 34"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=337 id="Âõ≥ 34"
 src="img/image030.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="ê} 35"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="Âõ≥ 35"
 src="img/image031.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="ê} 36"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="Âõ≥ 36"
 src="img/image032.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=439 height=410 id="ê} 37"
+<p class=MsoNormal><span lang=EN-US><img width=439 height=410 id="Âõ≥ 37"
 src="img/image033.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="ê} 38"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=361 id="Âõ≥ 38"
 src="img/image034.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 39"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 39"
 src="img/image035.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="ê} 40"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=361 id="Âõ≥ 40"
 src="img/image036.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=439 height=338 id="ê} 43"
+<p class=MsoNormal><span lang=EN-US><img width=439 height=338 id="Âõ≥ 43"
 src="img/image037.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=555 height=337 id="ê} 44"
+<p class=MsoNormal><span lang=EN-US><img width=555 height=337 id="Âõ≥ 44"
 src="img/image038.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="ê} 45"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="Âõ≥ 45"
 src="img/image039.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 <hr></hr>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="ê} 47"
+<p class=MsoNormal><span lang=EN-US><img width=417 height=337 id="Âõ≥ 47"
 src="img/image040.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
